# hgauss

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  README.rst  hgauss-config.cmake.in  install
cmake/: FindHCEPHES.cmake
hgauss/: hgauss.c
include/: hgauss.h
include/hgauss/: hgauss.h
src/: hgauss.c
test/: CMakeLists.txt  test_hgauss.c
test/src/: hgauss.c
